--- a/frontend/src/components/chat-input/chat-input.module.scss
+++ b/frontend/src/components/chat-input/chat-input.module.scss
@@ -1,15 +1,15 @@
 .root {
   display: flex;
-  flex-grow: 1;
-  flex-shrink: 1;
-  flex-direction: column;
+  flex-direction: row;
 }
-.outputarea {
+
+.inputarea {
   resize: none;
   display: flex;
   flex-grow: 1;
   flex-shrink: 1;
   background-color: rgba(255, 255, 255, 0);
   margin: 5px;
+  height: 100px;
   font-size: 16px;
 }
