--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -18,6 +18,9 @@ a {
   font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
+  text-align: start;
+  position: fixed;
+  right: 10px;
 }
 a:hover {
   color: #535bf2;
@@ -47,6 +50,7 @@ button {
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
+  margin: 5px;
 }
 button:hover {
   border-color: #646cff;
