--- a/src/components/dropzone/dropzone.module.scss
+++ b/src/components/dropzone/dropzone.module.scss
@@ -2,9 +2,6 @@
   display: flex;
   flex-direction: column;
   overflow: auto;
-  &:hover {
-    background-color: rgba(0, 0, 0, 0.1);
-  }
   border-image: linear-gradient(
       180deg,
       rgba(255, 255, 255, 0) 0%,
@@ -13,4 +10,17 @@
     )
     1 / 2px stretch;
   margin: 4px;
+}
+
+.selected {
+  background-color: rgb(64, 191, 21);
+}
+.dropzone {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  &:hover {
+    background-color: rgba(0, 0, 0, 0.1);
+  }
+  margin: 5px;
 }
