--- a/src/components/chat/chat.module.scss
+++ b/src/components/chat/chat.module.scss
@@ -3,13 +3,5 @@
   flex-grow: 1;
   flex-shrink: 1;
   flex-direction: column;
-}
-.outputarea {
-  resize: none;
-  display: flex;
-  flex-grow: 1;
-  flex-shrink: 1;
-  background-color: rgba(255, 255, 255, 0);
-  margin: 5px;
-  font-size: 16px;
+  overflow: auto;
 }
