--- a/src/components/chat/chat.module.scss
+++ b/src/components/chat/chat.module.scss
@@ -4,4 +4,8 @@
   flex-shrink: 1;
   flex-direction: column;
   overflow: auto;
+  height: 100%;
+  position: sticky;
+  bottom: 0px;
+  width: 100%;
 }
