--- a/src/components/status-bar/status-bar.module.scss
+++ b/src/components/status-bar/status-bar.module.scss
@@ -3,6 +3,6 @@
   flex-grow: 1;
   flex-shrink: 1;
   max-height: 1.5rem;
-  padding: 0px;
-  margin: 4px;
+  padding-top: 8px;
+  padding-left: 8px;
 }
