--- a/src/components/formatted-text/formatted-text.module.scss
+++ b/src/components/formatted-text/formatted-text.module.scss
@@ -1,13 +1,13 @@
 .root {
   display: flex;
   flex-direction: column;
-  background-color: rgba(255, 255, 255, 0.1);
-  margin: 5px;
+  margin: 0px 20%;
   font-size: 16px;
-  overflow: auto;
   padding: 0px;
 }
 
 code[class*='language-'] {
+  padding: 0;
+  margin: 0;
   color: rgb(137, 3, 174);
 }
