--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,10 +1,15 @@
 .App {
-  margin: 0 auto;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   width: 100%;
   height: 100%;
   position: fixed;
   top: 0px;
   left: 0px;
+  overflow: auto;
+
+  background-image: url('./assets/background.svg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: local;
 }
