--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -13,3 +13,12 @@
   background-repeat: no-repeat;
   background-attachment: local;
 }
+
+.emptyTopArea {
+  min-height: calc(50vw - 600px);
+}
+
+.emptyMiddleArea {
+  min-height: 100vh;
+  max-height: 100vh;
+}
