--- a/src/components/chat-input/chat-input.module.scss
+++ b/src/components/chat-input/chat-input.module.scss
@@ -1,18 +1,16 @@
 .root {
   display: flex;
   flex-direction: row;
-  position: relative;
-  bottom: 0px;
-  margin: 0% 20%;
+  width: 100%;
+  max-width: 900px;
 }
 
 .inputarea {
   resize: none;
   display: flex;
-  flex-grow: 1;
-  flex-shrink: 1;
   background-color: rgba(255, 255, 255, 0);
-  margin: 5px;
-  height: 100px;
-  font-size: 16px;
+  margin: 12px;
+  width: 100%;
+  font-family: 'Roboto', Helvetica;
+  font-size: 18px;
 }
