--- a/src/components/chat/chat.module.scss
+++ b/src/components/chat/chat.module.scss
@@ -1,21 +1,14 @@
 .root {
   display: flex;
-  flex-grow: 1;
-  flex-shrink: 1;
   flex-direction: column;
-  bottom: 0px;
-  overflow: auto;
-  height: 100%;
+  height: 80vh;
+  justify-content: space-between;
+  width: 100%;
+  align-items: center;
 }
-.message {
-  background-color: rgba(255, 255, 255, 0);
-}
-.ai {
-  background-color: rgba(162, 0, 168, 0.1);
-}
-.human {
-  background-color: rgba(14, 132, 136, 0.1);
-}
-.formated-text-area {
+
+.formatedTextArea {
+  width: 100%;
+  max-width: 900px;
   overflow: auto;
 }
