--- a/src/components/status-bar/status-bar.module.scss
+++ b/src/components/status-bar/status-bar.module.scss
@@ -1,7 +1,5 @@
 .root {
   display: flex;
-  flex-grow: 1;
-  flex-shrink: 1;
-  max-height: 1.5rem;
-  padding: 8px;
+  max-height: 20px;
+  justify-content: space-between;
 }
