--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,20 +1,16 @@
 .App {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  height: 100%;
-  position: fixed;
-  top: 0px;
-  left: 0px;
-  overflow: auto;
-
-  background-image: url('./assets/background.svg');
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-attachment: local;
-}
-
-.emptyMiddleArea {
-  min-height: 100vh;
-  max-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    max-width: 100vw;
+    height: 100%;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    overflow: auto;
+    justify-content: space-between;
+    background-image: url('./assets/artwork.svg'), linear-gradient(180deg, #dba7be 0%, #52255a 50%, #035438 100%);
+    background-repeat: no-repeat;
+    background-attachment: local;
+    background-position: 0% 50%;
 }
