--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,16 +1,17 @@
 .App {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    max-width: 100vw;
-    height: 100%;
-    position: fixed;
-    top: 0px;
-    left: 0px;
-    overflow: auto;
-    justify-content: space-between;
-    background-image: url('./assets/artwork.svg'), linear-gradient(180deg, #dba7be 0%, #52255a 50%, #035438 100%);
-    background-repeat: no-repeat;
-    background-attachment: local;
-    background-position: 0% 50%;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  max-width: 100vw;
+  height: 100%;
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  overflow: auto;
+  justify-content: space-between;
+  background-image: url('./assets/artwork.svg'),
+    linear-gradient(180deg, #dba7be 0%, #52255a 50%, #035438 100%);
+  background-repeat: no-repeat;
+  background-attachment: local;
+  background-position: 0% 50%;
 }
