--- a/src/components/chat-input/chat-input.module.scss
+++ b/src/components/chat-input/chat-input.module.scss
@@ -1,8 +1,7 @@
 .root {
     display: flex;
     flex-direction: column;
-    max-width: 900px;
-    // padding: 12px;
+    width: 100%;
     position: relative;
 }
 
