--- a/src/components/multi-chat/multi-chat.module.scss
+++ b/src/components/multi-chat/multi-chat.module.scss
@@ -3,5 +3,8 @@
   flex-direction: row;
   height: 80vh;
   width: 100%;
+  max-width: 100vw;
   padding: 10vh 0px;
+  justify-content: space-between;
+  align-content: space-between;
 }
