--- a/src/components/dropzone/dropzone.module.scss
+++ b/src/components/dropzone/dropzone.module.scss
@@ -3,7 +3,10 @@
 .root {
     display: flex;
     flex-direction: column;
-    overflow: auto;
+}
+
+.resetButton {
+    width: fit-content;
 }
 
 
@@ -17,6 +20,15 @@
 
 @media (max-width: 1250px) {
     .root {
+        position: absolute;
+        top: 0px;
+        left: 0px;
+        height: 100%;
+        width: 100%;
+        background-color: rgba(233, 233, 233, 0.25);
+    }
+    
+    .hidden {
         display: none;
     }
 }
