--- a/src/components/multi-chat/multi-chat.module.scss
+++ b/src/components/multi-chat/multi-chat.module.scss
@@ -1,11 +1,45 @@
+@import '../dropzone/dropzone.module';
+
 .root {
-  display: flex;
-  flex-direction: row;
-  height: 80vh;
-  padding: 10px;
-  width: calc(100% - 20px);
-  max-width: 100vw;
-  justify-content: space-between;
-  align-content: space-between;
-  position: relative;
+    display: flex;
+    flex-direction: row;
+    height: 80vh;
+    padding: 10px;
+    width: calc(100% - 20px);
+    max-width: 100vw;
+    justify-content: space-between;
+    align-content: space-between;
+    position: relative;
+}
+
+.dropzoneArea {
+    display: flex;
+    flex-direction: column;
+}
+
+.resetButton {
+    width: fit-content;
+}
+
+.dropzoneLong {
+    @extend .dropzone;
+    flex-direction: column;
+    display: flex;
+    height: 100%;
+    margin: 5px;
+}
+
+@media (max-width: 1250px) {
+    .dropzoneArea {
+        position: absolute;
+        top: 0px;
+        left: 0px;
+        height: 100%;
+        width: 100%;
+        background-color: rgba(233, 233, 233, 0.25);
+    }
+    
+    .hidden {
+        display: none;
+    }
 }
