--- a/src/components/multi-chat/multi-chat.module.scss
+++ b/src/components/multi-chat/multi-chat.module.scss
@@ -4,12 +4,13 @@
     display: flex;
     flex-direction: row;
     height: 80vh;
-    padding: 10px;
+    padding: 8px;
     width: calc(100% - 20px);
     max-width: 100vw;
     justify-content: space-between;
     align-content: space-between;
     position: relative;
+    align-self: center;
 }
 
 .dropzoneArea {
@@ -19,6 +20,21 @@
 
 .resetButton {
     width: fit-content;
+    background-image: url(../../assets/reset_files_icon.png);
+    width: 300px;
+    max-height: 40px;
+    aspect-ratio: 4 / 3;
+    border: none;
+    background-color: transparent;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    background-size: contain;
+    background-attachment: scroll;
+
+    transition: all 0.3s;
+    &:hover {
+        transform: scale(1.1);
+    }
 }
 
 .dropzoneLong {
@@ -37,6 +53,7 @@
         left: 0px;
         height: 100%;
         width: 100%;
+        border-radius: 32px;
         background-color: rgba(233, 233, 233, 0.25);
     }
     
