Remove background and a few TODOs added

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -9,8 +9,8 @@
   left: 0px;
   overflow: auto;
   justify-content: space-between;
-  background-image: url('./assets/artwork.svg'),
-    linear-gradient(180deg, #dba7be 0%, #52255a 50%, #035438 100%);
+  // background-image: url('./assets/artwork.svg');
+  background-image: linear-gradient(180deg, #dba7be 0%, #52255a 50%, #035438 100%);
   background-repeat: no-repeat;
   background-attachment: local;
   background-position: 0% 50%;
