--- a/src/components/status-bar/status-bar.module.scss
+++ b/src/components/status-bar/status-bar.module.scss
@@ -1,5 +1,7 @@
 .root {
   display: flex;
   max-height: 20px;
-  justify-content: right;
+  justify-content: space-between;
+  font-family: 'Roboto', Helvetica;
+  font-size: 16px;
 }
